--- a/UnamWebPanel/web.config
+++ b/UnamWebPanel/web.config
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
-  <location path="unamwebpanel.db">
+  <location path="db">
     <system.web>
       <authorization>
 	    <deny users="*"/>
